Refactor ticket form UI and improve song search functionality

--- a/public/index.html
+++ b/public/index.html
@@ -191,7 +191,7 @@
         type="button"
         id="goToSongs"
       >
-        Next: Add Songs (optional)
+        Next
       </button>
 
       <button
@@ -233,19 +233,12 @@
     <section id="selectedSongsList"></section>
 
     <fieldset>
-      <button
-        type="button"
-        id="backToInfo"
-      >
-        Back to Details
-      </button>
-
       <!-- Skip just means "no songs", still saves the event -->
       <button
         type="button"
         id="skipSongsButton"
       >
-        Skip Songs & Save Event
+        Skip & Save
       </button>
 
       <!-- Normal save with any selected songs -->
