Refactor button layout and enhance form styling for improved user experience

--- a/public/index.html
+++ b/public/index.html
@@ -187,12 +187,8 @@
 
     <!-- Button to go to step 2 -->
     <fieldset>
-      <button
-        type="button"
-        id="goToSongs"
-      >
-        Next
-      </button>
+<button type="button" id="goToSongs" class="form-btn">Next</button>
+
 
       <button
         class="cancel"
