Add poster URL field to ticket model and update form and display

--- a/public/index.html
+++ b/public/index.html
@@ -172,6 +172,19 @@
     </fieldset>
 
     <fieldset>
+      <label for="posterUrl">Concert Image URL</label>
+      <small>Optional. Paste a link to a poster or photo.</small>
+      <input
+        type="url"
+        name="posterUrl"
+        id="posterUrl"
+        placeholder="https://example.com/my-concert-poster.jpg"
+        autocomplete="off"
+      />
+    </fieldset>
+
+
+    <fieldset>
       <label for="notes">Notes</label>
       <small>Special memories, favorite songs, or other details.</small>
       <textarea
