Update song section header for clarity in concert details

--- a/public/index.html
+++ b/public/index.html
@@ -234,7 +234,7 @@
 
     <section id="songResults"></section>
 
-    <h4>Selected Songs for this Concert</h4>
+    <h4>Favorite songs from this concert</h4>
     <section id="selectedSongsList"></section>
 
     <fieldset>
