--- a/public/index.html
+++ b/public/index.html
@@ -164,7 +164,7 @@
     </fieldset>
 
     <fieldset>
-      <label for="posterUrl">Concert Image URL</label>
+      <label for="posterUrl">Artist Image URL</label>
       <input
         type="url"
         name="posterUrl"
@@ -174,6 +174,16 @@
       />
     </fieldset>
 
+    <fieldset>
+  <label for="posterUrl2">Concert Image URL</label>
+  <input
+    type="url"
+    name="posterUrl2"
+    id="posterUrl2"
+    placeholder="https://example.com/second-photo.jpg"
+    autocomplete="off"
+  />
+</fieldset>
 
     <fieldset>
       <label for="notes">Notes</label>
@@ -303,7 +313,6 @@
       <code>.env</code> file.
     </p>
   </section>
-  
   <script
     src="script.js"
     type="module"
